--- a/src/clos/load.lsp.in
+++ b/src/clos/load.lsp.in
@@ -1,21 +1,21 @@
 (defconstant +clos-module-files+
-'("@srcdir@/walk.lsp"
-  "@srcdir@/macros.lsp"
-  "@srcdir@/kernel.lsp"
-  "@srcdir@/method.lsp"
-  "@srcdir@/slot.lsp"
-  "@srcdir@/combin.lsp"
-  "@srcdir@/precomp.lsp"
-  "@srcdir@/boot.lsp"
-  "@srcdir@/defclass.lsp"
-  "@srcdir@/standard.lsp"
-  "@srcdir@/print.lsp"
-  "@srcdir@/change.lsp"
-  "@srcdir@/builtin.lsp"
-  "@srcdir@/stdmethod.lsp"
-  "@srcdir@/generic.lsp"
-  "@srcdir@/fixup.lsp"
-  "@srcdir@/inspect.lsp"
-  "@srcdir@/conditions.lsp"))
+'("src:clos;walk.lsp"
+  "src:clos;macros.lsp"
+  "src:clos;kernel.lsp"
+  "src:clos;method.lsp"
+  "src:clos;slot.lsp"
+  "src:clos;combin.lsp"
+  "src:clos;precomp.lsp"
+  "src:clos;boot.lsp"
+  "src:clos;defclass.lsp"
+  "src:clos;standard.lsp"
+  "src:clos;print.lsp"
+  "src:clos;change.lsp"
+  "src:clos;builtin.lsp"
+  "src:clos;stdmethod.lsp"
+  "src:clos;generic.lsp"
+  "src:clos;fixup.lsp"
+  "src:clos;inspect.lsp"
+  "src:clos;conditions.lsp"))
 
 (mapc #'(lambda (x) (load x :verbose nil)) +clos-module-files+)
