--- a/src/clx/load.lsp.in
+++ b/src/clx/load.lsp.in
@@ -1,21 +1,21 @@
 (defconstant +clx-module-files+
-'("@abs_srcdir@/ecldep"
-  "@abs_srcdir@/depdefs"
-  "@abs_srcdir@/clxmain"
-  "@abs_srcdir@/dependent"
-  "@abs_srcdir@/macros"
-  "@abs_srcdir@/bufmac"
-  "@abs_srcdir@/buffer"
-  "@abs_srcdir@/display"
-  "@abs_srcdir@/gcontext"
-  "@abs_srcdir@/input"
-  "@abs_srcdir@/requests"
-  "@abs_srcdir@/fonts"
-  "@abs_srcdir@/graphics"
-  "@abs_srcdir@/texts"
-  "@abs_srcdir@/attributes"
-  "@abs_srcdir@/translate"
-  "@abs_srcdir@/keysyms"
-  "@abs_srcdir@/manager"
-  "@abs_srcdir@/image"
-  "@abs_srcdir@/resource"))
+'("src:clx;ecldep"
+  "src:clx;depdefs"
+  "src:clx;clxmain"
+  "src:clx;dependent"
+  "src:clx;macros"
+  "src:clx;bufmac"
+  "src:clx;buffer"
+  "src:clx;display"
+  "src:clx;gcontext"
+  "src:clx;input"
+  "src:clx;requests"
+  "src:clx;fonts"
+  "src:clx;graphics"
+  "src:clx;texts"
+  "src:clx;attributes"
+  "src:clx;translate"
+  "src:clx;keysyms"
+  "src:clx;manager"
+  "src:clx;image"
+  "src:clx;resource"))
