--- a/src/cmp/load.lsp.in
+++ b/src/cmp/load.lsp.in
@@ -1,33 +1,33 @@
 (defconstant +cmp-module-files+
-'("@abs_srcdir@/cmpdefs.lsp"
-  "@abs_srcdir@/cmpmac.lsp"
-  "@abs_srcdir@/cmpinline.lsp"
-  "@abs_srcdir@/cmputil.lsp"
-  "@abs_srcdir@/cmptype.lsp"
-  "@abs_srcdir@/cmpbind.lsp"
-  "@abs_srcdir@/cmpblock.lsp"
-  "@abs_srcdir@/cmpcall.lsp"
-  "@abs_srcdir@/cmpcatch.lsp"
-  "@abs_srcdir@/cmpenv.lsp"
-  "@abs_srcdir@/cmpeval.lsp"
-  "@abs_srcdir@/cmpexit.lsp"
-  "@abs_srcdir@/cmpflet.lsp"
-  "@abs_srcdir@/cmpfun.lsp"
-  "@abs_srcdir@/cmpif.lsp"
-  "@abs_srcdir@/cmplam.lsp"
-  "@abs_srcdir@/cmplet.lsp"
-  "@abs_srcdir@/cmploc.lsp"
-  "@abs_srcdir@/cmpmap.lsp"
-  "@abs_srcdir@/cmpmulti.lsp"
-  "@abs_srcdir@/cmpspecial.lsp"
-  "@abs_srcdir@/cmptag.lsp"
-  "@abs_srcdir@/cmptop.lsp"
-  "@abs_srcdir@/cmpvar.lsp"
-  "@abs_srcdir@/cmpwt.lsp"
-  "@abs_srcdir@/cmpffi.lsp"
-  "@abs_builddir@/cmpcfg.lsp"
-  "@abs_srcdir@/cmpmain.lsp"))
+'("src:cmp;cmpdefs.lsp"
+  "src:cmp;cmpmac.lsp"
+  "src:cmp;cmpinline.lsp"
+  "src:cmp;cmputil.lsp"
+  "src:cmp;cmptype.lsp"
+  "src:cmp;cmpbind.lsp"
+  "src:cmp;cmpblock.lsp"
+  "src:cmp;cmpcall.lsp"
+  "src:cmp;cmpcatch.lsp"
+  "src:cmp;cmpenv.lsp"
+  "src:cmp;cmpeval.lsp"
+  "src:cmp;cmpexit.lsp"
+  "src:cmp;cmpflet.lsp"
+  "src:cmp;cmpfun.lsp"
+  "src:cmp;cmpif.lsp"
+  "src:cmp;cmplam.lsp"
+  "src:cmp;cmplet.lsp"
+  "src:cmp;cmploc.lsp"
+  "src:cmp;cmpmap.lsp"
+  "src:cmp;cmpmulti.lsp"
+  "src:cmp;cmpspecial.lsp"
+  "src:cmp;cmptag.lsp"
+  "src:cmp;cmptop.lsp"
+  "src:cmp;cmpvar.lsp"
+  "src:cmp;cmpwt.lsp"
+  "src:cmp;cmpffi.lsp"
+  "build:cmp;cmpcfg.lsp"
+  "src:cmp;cmpmain.lsp"))
 
 (mapc #'(lambda (x) (load x :verbose nil)) +cmp-module-files+)
 
-(load "@abs_srcdir@/sysfun" :verbose nil)
+(load "src:cmp;sysfun" :verbose nil)
