--- a/src/configure.in
+++ b/src/configure.in
@@ -40,7 +40,7 @@ dnl Guess operating system of host. We do not allow cross-compiling.
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
 
-AC_SUBST(host)
+AC_SUBST(thehost)
 AC_SUBST(bindir)
 AC_SUBST(mandir)
 AC_SUBST(infodir)
@@ -142,7 +142,7 @@ dnl AC_CHECK_HEADERS(unistd.h stdlib.h stdarg.h string.h)
 AC_CHECK_HEADERS(sys/resource.h sys/utsname.h float.h pwd.h dlfcn.h link.h\
  mach-o/dyld.h ulimit.h dirent.h sys/ioctl.h)
 AC_CHECK_FUNCS(nanosleep alarm times isnanf select setenv putenv\
- lstat mkstemp)
+ lstat mkstemp sigprocmask)
 AC_ISC_POSIX
 
 dnl ----------------------------------------------------------------------
@@ -236,7 +236,7 @@ if test "${locative}" ; then
   EXTRA_OBJS="${EXTRA_OBJS} unify.${OBJEXT}"
   AC_DEFINE(LOCATIVE)
 fi
-AC_MSG_CHECKING(Checking for threads support)
+AC_MSG_CHECKING(for threads support)
 if test "${threads}" ; then
   if test -z "${THREAD_LDFLAGS}"; then
     threads='';
@@ -324,7 +324,7 @@ XLIBS="$XLIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS"
 dnl ---------------------------------------------------------------------
 dnl		GNU multiprecision library
 dnl
-AC_MSG_CHECKING(checking for gmp...)
+AC_MSG_CHECKING(for gmp...)
 if test ${local_gmp} = "yes" ; then
   AC_MSG_RESULT(already installed)
 else
@@ -340,7 +340,7 @@ fi
 dnl ---------------------------------------------------------------------
 dnl		Boehm-Weiser garbage collector
 dnl
-AC_MSG_CHECKING(checking for Boehm-Weiser gc...)
+AC_MSG_CHECKING(for Boehm-Weiser gc...)
 if test ${boehm} = "no"; then
   AC_MSG_RESULT(use small collector instead)
 elif test "${local_boehm}" = "no" ; then
