--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -181,6 +181,8 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #undef HAVE_DLFCN_H
 #undef HAVE_LINK_H
 #undef HAVE_MACH_O_DYLD_H
+/* POSIX signals							*/
+#undef HAVE_SIGPROCMASK
 
 /* what characters are used to mark beginning of new line		*/
 #undef ECL_NEWLINE_IS_CRLF
