--- a/src/doc/Makefile.in
+++ b/src/doc/Makefile.in
@@ -1,12 +1,5 @@
-# file crs/Makefile
-
 top_srcdir= @top_srcdir@
 srcdir	= @srcdir@
-#ifdef MSDOS
-VPATH	= .;@srcdir@
-#else
-VPATH	= @srcdir@
-#endif
 
 infodir = @infodir@
 libdir = @libdir@
@@ -20,8 +13,8 @@ mkinstalldirs = $(SHELL) $(top_srcdir)/gc/mkinstalldirs
 
 VERSION=@ECL_VERSION@
 
-HTML = index.html license.html lgpl.html news.html user_manual benchmark.html \
-	install.html developers_manual download.html
+HTML = index.html license.html lgpl.html news.html benchmark.html \
+	install.html download.html
 
 FILTER = sed 's,@VERSION@,$(VERSION),g'
 
@@ -49,59 +42,72 @@ flatinstall: all
 	$(mkinstalldirs) $(PREFIX)/doc
 	$(INSTALL_DATA) ecl.info $(PREFIX)/doc
 	$(INSTALL_DATA) ecldev.info $(PREFIX)/doc
-	$(mkinstalldirs) $(PREFIX)/doc/ecl
-	for i in ecl/*; do $(INSTALL_DATA) $$i $(PREFIX)/doc/ecl/; done
-	$(mkinstalldirs) $(PREFIX)/doc/ecldev
-	for i in ecldev/*; do $(INSTALL_DATA) $$i $(PREFIX)/doc/ecldev/; done
+	if [ -f user.html ]; then \
+	  $(INSTALL_DATA) $$i $(PREFIX)/doc/; \
+	else \
+	  $(mkinstalldirs) $(PREFIX)/doc/ecl; \
+	  for i in ecl/*; do $(INSTALL_DATA) $$i $(PREFIX)/doc/ecl/; done; \
+	fi
+	if [ -f devel.html ]; then \
+	  $(INSTALL_DATA) devel.html $(PREFIX)/doc/; \
+	else \
+	  $(mkinstalldirs) $(PREFIX)/doc/ecldev; \
+	  for i in ecldev/*; do $(INSTALL_DATA) $$i $(PREFIX)/doc/ecldev/; done; \
+	fi
 	for i in *.html; do $(INSTALL_DATA) $$i $(PREFIX)/doc/; done
 
 uninstall:
 	rm -r $(infodir)/ecl.info $(infodir)/ecldev.info
 	rm $(mandir)/man$(manext)/ecl.$(manext)
 
+head: developers_manual user_manual $(srcdir)/head
+	if [ -f ecl/index.html ]; then \
+	  sed -e 's,ecl/user.html,ecl/index.html,g' \
+	      -e 's,ecldev/devel.html,ecldev/index.html,g' $(srcdir)/head > head; \
+	else \
+	  cp $(srcdir)/head head; \
+	fi
 ecl.info: $(srcdir)/user.txi $(srcdir)/macros.txi
 	makeinfo -I $(srcdir) --no-split $(srcdir)/user.txi
 ecldev.info: $(srcdir)/devel.txi $(srcdir)/macros.txi
 	makeinfo -I $(srcdir) --no-split $(srcdir)/devel.txi
 
-download.html: $(srcdir)/download.in.html
-	cat $(srcdir)/head $? $(srcdir)/end | $(FILTER) > $@
-index.html: $(srcdir)/index.in.html
-	cat $(srcdir)/head $? $(srcdir)/end | $(FILTER) > $@
-install.html: $(srcdir)/install.in.html
-	cat $(srcdir)/head $? $(srcdir)/end | $(FILTER) > $@
-news.html: $(srcdir)/news.in.html
-	(cat $(srcdir)/head; \
-	 sed -e '/^----.*$$/,$$d' $(srcdir)/news.in.html; \
+download.html: $(srcdir)/download.in.html head
+	cat head $(srcdir)/download.in.html $(srcdir)/end | $(FILTER) > $@
+index.html: $(srcdir)/index.in.html head
+	cat head $(srcdir)/index.in.html $(srcdir)/end | $(FILTER) > $@
+install.html: $(srcdir)/install.in.html head
+	cat head $(srcdir)/download.in.html $(srcdir)/end | $(FILTER) > $@
+news.html: $(srcdir)/news.in.html head
+	(cat head; sed -e '/^----.*$$/,$$d' $(srcdir)/news.in.html; \
 	 sed -e '1,/^ECL [0-9\.]*$$/d;/^===*$$/d' $(srcdir)/../../ANNOUNCEMENT| sed -e '1d'; \
 	 sed -e '1,/^----*$$/d' $(srcdir)/news.in.html; \
 	 cat $(srcdir)/end) | $(FILTER) > $@
-benchmark.html: $(srcdir)/benchmark.in.html ../gabriel/BENCHMARK
-	(cat $(srcdir)/head; \
-	 cat $(srcdir)/benchmark.in.html; \
+benchmark.html: $(srcdir)/benchmark.in.html ../gabriel/BENCHMARK head
+	(cat head; cat $(srcdir)/benchmark.in.html; \
 	 echo '<pre>'; cat ../gabriel/BENCHMARK; echo '</pre>'; \
 	 cat $(srcdir)/end) | $(FILTER) > $@
 ../gabriel/BENCHMARK:
 	echo "No benchmarks available" > $@
-license.html: $(top_srcdir)/../Copyright
-	(cat $(srcdir)/head; \
-	 echo '<pre>'; cat $?; echo '</pre>'; \
+license.html: $(top_srcdir)/../Copyright head
+	(cat head; \
+	 echo '<pre>'; cat $(top_srcdir)/../Copyright; echo '</pre>'; \
 	 cat $(srcdir)/end) | $(FILTER) > $@
-lgpl.html: $(top_srcdir)/../LGPL
-	(cat $(srcdir)/head; \
-	 echo '<pre>'; cat $?; echo '</pre>'; \
+lgpl.html: $(top_srcdir)/../LGPL head
+	(cat head; \
+	 echo '<pre>'; cat $(top_srcdir)/../LGPL; echo '</pre>'; \
 	 cat $(srcdir)/end) | $(FILTER) > $@
 user_manual: $(srcdir)/user.txi $(srcdir)/macros.txi
 	echo "Producing ecl.html; ignore error messages."
 	test -d ecl || mkdir ecl; \
 	(texi2html -I=$(srcdir) -subdir=ecl -split=chapter $(srcdir)/user.txi \
-	|| (makeinfo -I $(srcdir) --html $(srcdir)/user.txi; rm -rf ecl)) \
+	|| (makeinfo -I $(srcdir) --html $(srcdir)/user.txi)) \
 	&& touch user_manual
 developers_manual: $(srcdir)/devel.txi $(srcdir)/macros.txi
 	echo "Producing ecldev.html; ignore error messages."
 	test -d ecldev || mkdir ecldev; \
 	(texi2html -I=$(srcdir) -subdir=ecldev -split=chapter $(srcdir)/devel.txi \
-	|| (makeinfo -I $(srcdir) --html $(srcdir)/devel.txi; rm -rf ecldev)) \
+	|| (makeinfo -I $(srcdir) --html $(srcdir)/devel.txi)) \
 	&& touch developers_manual
 clean:
 	rm -r -f ecl ecldev ecl.info ecldev.info *.html user_manual developers_manual
