--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -20,7 +20,9 @@ DPP	= ./dpp$(EXE)
 #
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
-libdir	= @libdir@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
 
 # Files
 
@@ -55,14 +57,18 @@ all:	$(DPP) ../libecl.a cinit.o
 .PHONY:	all
 
 install: $(HFILES)
-	for i in $(HFILES); do $(INSTALL_DATA) $$i $(PREFIX)$(libdir)/h/; done
+	for i in $(HFILES); do $(INSTALL_DATA) $$i $(libdir)/h/; done
 	sed '/-CUT-/,$$d' ../h/config.h > ../h/config-install.h
-	$(INSTALL_DATA) ../h/config-install.h $(PREFIX)$(libdir)/h/config.h
-flatinstall: $(HFILES)
-	for i in $(HFILES); do $(INSTALL_DATA) $$i $(PREFIX)/h/; done
-	sed '/-CUT-/,$$d' ../h/config.h > ../h/config-install.h
-	$(INSTALL_DATA) ../h/config-install.h $(PREFIX)/h/config.h
+	$(INSTALL_DATA) ../h/*.h $(libdir)/h/
+	rm $(libdir)/h/config.h
+	mv $(libdir)/h/config-install.h $(libdir)/h/config.h
 
+flatinstall: $(HFILES)
+	for i in $(HFILES); do $(INSTALL_DATA) $$i $(prefix)/h/; done
+	sed '/-CUT-/,$$d' ../h/config.h > ../h/config-install.h
+	$(INSTALL_DATA) ../h/*.h $(prefix)/h/
+	rm $(prefix)/h/config.h
+	mv $(prefix)/h/config-install.h $(prefix)/h/config.h
 
 ../libecl.a: $(OBJS)
 	$(RM) $@
