--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -65,6 +65,8 @@ ecl_min$(EXE): $(LIBRARIES) .gdbinit libecl.a
 
 lsp/config.lsp: lsp/config.lsp.in
 	sed -e 's,@ecldir@,$(libdir),g' < lsp/config.lsp.in > lsp/config.lsp
+compile.lsp: compile.lsp.in
+	sed -e 's,@ecldir@,$(libdir),g' < compile.lsp.in > compile.lsp
 @LIBPREFIX@ecl.@LIBEXT@: @LIBPREFIX@gmp.@LIBEXT@ @LIBPREFIX@gc.@LIBEXT@ lsp/config.lsp
 	cd c; $(MAKE)
 @LIBPREFIX@gc.@LIBEXT@:
