--- a/src/configure.in
+++ b/src/configure.in
@@ -363,12 +363,13 @@ dnl
 dnl Notice that we build ${builddir}/h/configpre.h fron ${srcdir}/h/config.h.in,
 dnl and then use all AC_DEF* to build h/config.h from h/configpre.h
 dnl
-AC_CONFIG_FILES(compile.lsp bare.lsp
+AC_CONFIG_FILES(bare.lsp
  lsp/config.lsp cmp/cmpcfg.lsp lsp/load.lsp clos/load.lsp cmp/load.lsp
  ../Makefile Makefile c/Makefile doc/Makefile doc/ecl.man
  tk/Makefile tests/Makefile ansi-tests/Makefile gabriel/Makefile)
 AC_CONFIG_FILES([ecl-config:util/ecl-config],[chmod +x ecl-config])
 AC_CONFIG_FILES([h/configpre:h/config.h.in])
 AC_CONFIG_FILES([lsp/config.lsp.in:lsp/config.lsp.in])
+AC_CONFIG_FILES([compile.lsp.in:compile.lsp.in])
 AC_CONFIG_HEADER([h/config.h:h/configpre])
 AC_OUTPUT
