The shells need the '-c' flag to execute the script mkinstalldir properly. Otherwise /bin/csh will think that mkinstalldir is a C-shell script, which it is not.

--- a/src/doc/Makefile.in
+++ b/src/doc/Makefile.in
@@ -10,7 +10,7 @@ manext=1
 INSTALL	= @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
-mkinstalldirs = $(SHELL) $(top_srcdir)/gc/mkinstalldirs
+mkinstalldirs = $(SHELL) -c $(top_srcdir)/gc/mkinstalldirs
 
 VERSION=@ECL_VERSION@
 
