--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -31,7 +31,7 @@ libdir=@libdir@
 INSTALL	= @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
-mkinstalldirs = $(SHELL) $(top_srcdir)/gc/mkinstalldirs
+mkinstalldirs = $(SHELL) -c $(top_srcdir)/gc/mkinstalldirs
 
 # Files
 
