--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -3,7 +3,6 @@
 #
 top_srcdir= @top_srcdir@
 srcdir	= @srcdir@
-VPATH	= @srcdir@
 
 # Programs used by "make":
 #
@@ -63,14 +62,14 @@ ecl_min$(EXE): $(LIBRARIES) .gdbinit libecl.a
 .gdbinit: $(srcdir)/util/gdbinit
 	cp $(srcdir)/util/gdbinit $@
 
-lsp/config.lsp: lsp/config.lsp.in
-	sed -e 's,@ecldir@,$(libdir),g' < lsp/config.lsp.in > lsp/config.lsp
-compile.lsp: compile.lsp.in
-	sed -e 's,@ecldir@,$(libdir),g' < compile.lsp.in > compile.lsp
-ecl-config: ecl-config.in
+lsp/config.lsp: lsp/config.pre
+	sed -e 's,@ecldir@,$(libdir),g' < lsp/config.pre > lsp/config.lsp
+compile.lsp: compile.pre
+	sed -e 's,@ecldir@,$(libdir),g' < compile.pre > compile.lsp
+ecl-config: ecl-config.pre
 	sed -e 's,~A,$(libdir),;s,~\*,,' \
 	    -e 's,@libdir\\@,$(libdir),' \
-	    -e 's,@includedir\\@,$(libdir)/h,' ecl-config.in > ecl-config
+	    -e 's,@includedir\\@,$(libdir)/h,' ecl-config.pre > ecl-config
 
 
 @LIBPREFIX@ecl.@LIBEXT@: @LIBPREFIX@gmp.@LIBEXT@ @LIBPREFIX@gc.@LIBEXT@ lsp/config.lsp
