Local functions whose name appears in a FUNCTION special form must be converted into an object. This is marked by setting FUN-REF-CCB to true.

--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -4,7 +4,7 @@
 ;;
 (in-package "COMPILER")
 (setq *cc* "@ECL_CC@")
-(setq *cc-flags* "@CFLAGS@ @LSPCFLAGS@")
+(setq *cc-flags* "@CFLAGS@ @ECL_CFLAGS@")
 (setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl -lgmp -lgc @CLIBS@")
 #+dlopen
 (setq *ld-shared-flags* "@LDRPATH@ @SHARED_LDFLAGS@ @LDFLAGS@ -lecl @CLIBS@")
