Fixed a few references to undefined variables. QUIT is now imported into CL-USER.

--- a/src/lsp/config.lsp.in
+++ b/src/lsp/config.lsp.in
@@ -28,7 +28,7 @@ Returns the version of your ECL as a string."
 (defun machine-type ()
   "Args: ()
 Returns, as a string, the type of the machine on which ECL runs."
-  @ARCHITECTURE@)
+  "@ARCHITECTURE@")
 
 ;; obtained from uname(2) where available
 (defun machine-instance ()
