Do not produce documentation

--- a/src/gmp/Makefile.in
+++ b/src/gmp/Makefile.in
@@ -449,8 +449,8 @@ CXXLINK = $(LIBTOOL) --mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) \
 CXXFLAGS = @CXXFLAGS@
 DIST_SOURCES = $(libdummy_la_SOURCES) $(libgmp_la_SOURCES) \
 	$(libgmpxx_la_SOURCES) $(libmp_la_SOURCES)
-INFO_DEPS = gmp.info
-DVIS = gmp.dvi
+#INFO_DEPS = gmp.info
+#DVIS = gmp.dvi
 TEXINFOS = gmp.texi
 HEADERS = $(include_HEADERS) $(nodist_include_HEADERS)
 
