--- a/src/configure.in
+++ b/src/configure.in
@@ -117,6 +117,7 @@ AC_SUBST(ECL_CC)dnl		Which compiler should we use for building ECL
 AC_SUBST(CFLAGS)dnl		Flags for the compiler
 AC_SUBST(ECL_CFLAGS)dnl		Similar, but specific to ECL (see src/util/ecl-config)
 AC_SUBST(CLIBS)dnl		System libraries to be linked in
+AC_SUBST(GCLIB)dnl		Library for the Boehm-Weiser garbage collector
 AC_SUBST(LDFLAGS)dnl		Flags for program linker
 AC_SUBST(SHARED_LDFLAGS)dnl	Flags for shared libraries linker
 AC_SUBST(BUNDLE_LDFLAGS)dnl	Flags for FASL files linker
