--- a/src/lsp/load.lsp.in
+++ b/src/lsp/load.lsp.in
@@ -1,9 +1,11 @@
-(load "src:lsp;export.lsp" :verbose nil)
-(load "src:lsp;defmacro.lsp" :verbose nil)
-(load "src:lsp;helpfile.lsp" :verbose nil)
-(load "src:lsp;evalmacros.lsp" :verbose nil)
+(if (not (member "CROSS" *features* :test #'string-equal))
+  (progn
+    (load "src:lsp;export.lsp" :verbose nil)
+    (load "src:lsp;defmacro.lsp" :verbose nil)
+    (load "src:lsp;helpfile.lsp" :verbose nil)
+    (load "src:lsp;evalmacros.lsp" :verbose nil)))
 
-(defconstant +lisp-module-files+
+(sys:*make-constant '+lisp-module-files+
 '("src:lsp;export.lsp"
   "src:lsp;defmacro.lsp"
   "src:lsp;helpfile.lsp"
@@ -43,5 +45,5 @@
   "src:lsp;mp.lsp"
 ))
 
+#-cross
 (mapc #'(lambda (x) (load x :verbose nil)) (cddddr +lisp-module-files+))
-
