--- a/src/configure.in
+++ b/src/configure.in
@@ -50,9 +50,9 @@ AC_SUBST(top_srcdir)
 dnl AC_ARG_ENABLE(tk,
 dnl 	[--enable-tk            Include Tk.],
 dnl 	tk="$enable_tk")
-dnl AC_ARG_ENABLE(clx,
-dnl 	[--enable-clx           Include CLX.],
-dnl 	clx="$enableval")
+AC_ARG_WITH(clx,
+	[--with-clx             Include CLX.],
+	clx="yes")
 AC_ARG_WITH(tcp,
 	[--with-tcp             Include socket interface.],
 	tcp="yes")
@@ -76,7 +76,7 @@ dnl AC_ARG_ENABLE(locative,
 dnl 	[--enable-locative      Include locative support.],
 dnl 	locative="$enable_locative")
 AC_ARG_ENABLE(threads,
-	[--enable-threads	Include the multiple thread facility.],
+	[--enable-threads       Include the multiple thread facility.],
 	threads="$enable_threads")
 dnl AC_ARG_ENABLE(runtime,
 dnl 	[--enable-runtime	Build no compiler.],
@@ -94,7 +94,7 @@ AC_ARG_WITH(clos-streams,
 	[--with-clos-streams    Allow user defined stream objects.],
 	closstreams="yes")
 AC_ARG_WITH(ffi,
-	[--with-ffi		Run-time foreign data manipulation.],
+	[--with-ffi             Run-time foreign data manipulation.],
 	ffi="yes")
 AC_ARG_WITH(cxx,
 	[--with-cxx             Build ECL using C++ compiler.],
@@ -220,8 +220,11 @@ if test ${tk} ; then
   AC_DEFINE(TK)
 fi
 if test ${clx} ; then
-  TARGETS="${TARGETS} eclx${EXEEXT}"
-  LSP_LIBRARIES="${LSP_LIBRARIES} ${LIBPREFIX}clx.${LIBEXT}"
+  if test ${shared} = "yes" ; then
+    LSP_LIBRARIES="${LSP_LIBRARIES} clx.fas"
+  else
+    LSP_LIBRARIES="${LSP_LIBRARIES} ${LIBPREFIX}clx.${LIBEXT}"
+  fi
   AC_DEFINE(CLX)
 fi
 if test "${tcp}" -o "${clx}"; then
@@ -379,7 +382,7 @@ dnl Notice that we build ${builddir}/h/configpre.h fron ${srcdir}/h/config.h.in,
 dnl and then use all AC_DEF* to build h/config.h from h/configpre.h
 dnl
 AC_CONFIG_FILES(bare.lsp cmp/cmpcfg.lsp lsp/load.lsp clos/load.lsp cmp/load.lsp
- ../Makefile Makefile c/Makefile doc/Makefile doc/ecl.man
+ eclx/load.lsp ../Makefile Makefile c/Makefile doc/Makefile doc/ecl.man
  tk/Makefile tests/Makefile ansi-tests/Makefile gabriel/Makefile)
 AC_CONFIG_FILES([ecl-config.pre:util/ecl-config])
 AC_CONFIG_FILES([h/configpre:h/config.h.in])
